{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 12,
  "lineage": "0ad251ff-cbf1-cc5e-e139-975ee58bf708",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_test_vpc1_Internetgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010184401514:internet-gateway/igw-0019fc10a4a797264",
            "id": "igw-0019fc10a4a797264",
            "owner_id": "010184401514",
            "tags": {
              "Name": "Gateway"
            },
            "tags_all": {
              "Name": "Gateway"
            },
            "vpc_id": "vpc-0d7423679d789c6ba"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route-inline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0019fc10a4a797264",
            "id": "r-rtb-0fa70633d87b08ae11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa70633d87b08ae1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_test_vpc1_Internetgateway",
            "aws_route_table.vpc_route",
            "aws_vpc.my_test_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010184401514:route-table/rtb-0fa70633d87b08ae1",
            "id": "rtb-0fa70633d87b08ae1",
            "owner_id": "010184401514",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7423679d789c6ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_test_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_test_vpc1_PublicSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010184401514:subnet/subnet-0c689185c667459df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c689185c667459df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010184401514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0d7423679d789c6ba"
          },
          "dependencies": [
            "aws_vpc.my_test_vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_test_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010184401514:vpc/vpc-0d7423679d789c6ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0352b36e94a20dd04",
            "default_route_table_id": "rtb-0536d108fcfe5b015",
            "default_security_group_id": "sg-07b8fa054a10e5c61",
            "dhcp_options_id": "dopt-01df69dc8df46a22d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d7423679d789c6ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0536d108fcfe5b015",
            "owner_id": "010184401514",
            "tags": {
              "name": "dev"
            },
            "tags_all": {
              "name": "dev"
            }
          }
        }
      ]
    }
  ]
}